@@ -23,6 +23,8 @@ xflr5 v6.37 May 28th, 2017
 	- added a verification of the OpenGL version at startup
 	- fixed two bad crash bugs when derotating a foil and when defining a flap
 
+xflr5 v6.36 May 22nd, 2017 - limited release only
+
 
 xflr5 v6.35 May 15th, 2017
 	- Added an option to adjust the number of worker threads in a foil multithreaded analysis
